--- a/src/Frontend/pagina principal/style.css
+++ b/src/Frontend/pagina principal/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Roboto', sans-serif;
-    font-weight: bold;
+    font-weight: medium;
 }
 
 
