--- a/src/Frontend/login/style.css
+++ b/src/Frontend/login/style.css
@@ -114,6 +114,26 @@ body * {
     box-shadow: 0px 10px 40px -12px #00ff8052;
 
 }
+.btn-cadastro{
+    width: 100%;
+    padding: 16px 0px;
+    margin: 25px;
+    margin-bottom: -60px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: #4b134b;
+    background: #00ff88;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #00ff8052;
+
+}
+a{
+    text-decoration: none;
+}
 
 @media only screen and (max-width: 950px){
     .card-login{
