--- a/src/Frontend/revisar candidatos/style.css
+++ b/src/Frontend/revisar candidatos/style.css
@@ -61,3 +61,14 @@ input[type="checkbox"] {
     /* Windows High Contrast Mode */
     background-color: #FCA311;
   }
+
+  /* Revisar candidatos */
+
+.design{
+  color:#FCA311;
+  margin-bottom: 20px;
+}
+.Medidor p{
+  margin-bottom: 10px;
+  margin-left: -17px;
+}
