--- a/src/Frontend/vagas/style.css
+++ b/src/Frontend/vagas/style.css
@@ -2,7 +2,7 @@
     background-color: #fca21144;
     border-radius: 5px;
 }
-input[type=text] {
+input[type=text], input[type=tel] {
     border: 2px solid #FCA311;
     border-radius: 4px;
     padding: 5px;
@@ -105,7 +105,7 @@ h4{
     margin: 10px;
 }
 
-.inp[type=text] {
+.inp[type=text], input[type=tel], .inp[type=email] {
     border: 2px solid #FCA311;
     border-radius: 4px;
     padding: 3px;
@@ -115,7 +115,7 @@ h4{
     display:block;   
 }
 
-.inp[type=email] {
+/* .inp[type=email] {
     border: 2px solid #FCA311;
     border-radius: 4px;
     padding: 3px;
@@ -123,7 +123,7 @@ h4{
     color: rgb(134, 134, 134);
     margin-bottom: -50px;
     display:block;   
-}
+} */
 .estilo{
     -webkit-appearance:none;
     background: #E5E5E5;
