--- a/src/Frontend/login/style.css
+++ b/src/Frontend/login/style.css
@@ -99,7 +99,7 @@ body * {
 }
 
 .btn-login{
-    width: 100%;
+    width: 450px;
     padding: 16px 0px;
     margin: 25px;
     border: none;
@@ -115,7 +115,7 @@ body * {
 
 }
 .btn-cadastro{
-    width: 100%;
+    width: 450px;
     padding: 16px 0px;
     margin: 25px;
     margin-bottom: -60px;
