--- a/src/Frontend/vagas/style.css
+++ b/src/Frontend/vagas/style.css
@@ -67,7 +67,7 @@ a{
     display: inline-block;
     width: 200px;
     padding: 30px;
-    align-items: center;
+    /*align-items: center;*/
     margin-right: 40px;
     margin-bottom: 17px;
     box-shadow: 3px 5px 0 #b1b1b1;
